src/test/deca/syntax/invalid/decl_missing_equals.deca
// Description :
// Signe '=' manquant entre identifiant et expression
//
// Resultats :
// Erreur syntaxique
// Regle : decl_var : ident ('=' expr)?

{
    int x  5 ;
}